<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IronEye</string>
    <string name="signing_in">Signing in …</string>
    <string name="title_section1">Connect</string>
    <string name="title_section2">Realtime Tracker</string>
    <string name="title_section3">Workout Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo_cd">IronEye logo</string>
    <string name="sign_out">Sign out</string>
    <string name="hold_up_phone_instruction">Hold your phone up to the display</string>
    <string name="connect_title_text">Connect to IronEye</string>
    <string name="signin_subtitle">Get more gainz</string>
    <string name="qr_code">QR Code</string>
    <string name="start_set">Start Set</string>
    <string name="end_set">End Set</string>
    <string name="max_weight_per_exercise">Max Weight per Exercise</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="play_video">Play Video</string>
    <string name="title_activity_review_past">Log Entry</string>
    <string name="review_your_form">Review your form:</string>
    <string name="lbs">lbs.</string>
    <string name="paused">Paused</string>
    <string name="exercise_ended">Exercise Ended</string>
    <string name="end_exercise">End Exercise</string>
    <string name="on_set_x">On Set %s</string>
    <string name="please_enter_weight">Please enter a weight.</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color</string>
    <string name="color_swatch_description_selected">Color selected</string>
    <string name="target_reps">Rep goal</string>
    <string name="error_colour">Dot Colour: </string>

</resources>
