<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="#ddd"
    tools:context="com.ironeye.android.SignInActivity">

    <ImageView
        android:src="@drawable/ironeye_eye_logo"
        android:contentDescription="@string/logo_cd"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/ironeye_logo"
        android:layout_marginBottom="10dp"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        app:typeface="roboto_slab_bold"
        android:textColor="?android:textColorPrimary"
        android:text="@string/app_name"
        android:id="@+id/title_sign_in"
        android:layout_gravity="center_horizontal" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:typeface="roboto_condensed_light_italic"
        android:textColor="?android:textColorPrimary"
        android:text="@string/signin_subtitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
