<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        app:typeface="roboto_condensed_bold"
        android:textColor="?android:textColorPrimary"
        android:text="@string/connect_title_text"
        android:id="@+id/hold_up_phone_title"
        android:layout_centerHorizontal="true"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:typeface="roboto_condensed_light_italic"
        android:textColor="?android:textColorPrimary"
        android:text="@string/hold_up_phone_instruction"
        android:layout_below="@id/hold_up_phone_title"
        android:id="@+id/hold_up_phone_text"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:paddingTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qrCodeImageView"
        android:contentDescription="@string/qr_code"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>